[package]
name = "drm-rs"
version = "0.1.0"
authors = ["Alberto Simón <alberto@simon.ph>"]
description = "(WIP) libdrm bindings to be able to use Kernel Mode Setting on Linux"
repository = "https://github.com/asimonf/libdrm-rs"
license = "GPL-3.0"
keywords = ["libdrm", "kms", "linux", "unsafe", "drm"]
readme = "README.md"

[dependencies]
libc = "0.2.12"
byteorder = "0.5.3"
ioctl = "0.3.3"

[lib]
name = "drm"
path = "src/lib.rs"
