[package]
name = "drm-rs"
version = "0.1.3"
authors = ["Alberto Simón <alberto@simon.ph>"]
description = "(WIP) libdrm bindings to be able to use Kernel Mode Setting on Linux"
repository = "https://github.com/rust-kms/libdrm-rs"
license = "MIT"
keywords = ["libdrm", "kms", "linux", "unsafe", "drm"]
readme = "README.md"

[dependencies]
libc = "0.2.16"
byteorder = "0.5.3"

[lib]
name = "drm"
path = "src/lib.rs"
